Migrates from REST to GraphQL